--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # E.g. your domain name
-modowner=com.mycompany
+modowner=com.unrulymedia
 
 # Your module name
-modname=my-module
+modname=vertx-demo
 
 # Your module version
-version=1.0.0-final
+version=1.0.0-SNAPSHOT
 
 # The test timeout in seconds
 testtimeout=300
